--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Angular project</title>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <script src="bower_components/angular/angular.js"></script>
 </head>
 <body>
-<h1>test</h1>
+
+  <p>Nothing here {{ 'yet' + '!' }}</p>
+
 </body>
 </html>
